--- a/CTFd/config.ini
+++ b/CTFd/config.ini
@@ -301,11 +301,11 @@ SAFE_MODE =
 [oauth]
 # OAUTH_CLIENT_ID
 # Register an event at https://majorleaguecyber.org/ and use the Client ID here
-OAUTH_CLIENT_ID =
+OAUTH_CLIENT_ID = coldchain38
 
 # OAUTH_CLIENT_ID
 # Register an event at https://majorleaguecyber.org/ and use the Client Secret here
-OAUTH_CLIENT_SECRET =
+OAUTH_CLIENT_SECRET = @Mannie88!
 
 [extra]
 # The extra section can be used to specify additional values to be loaded into CTFd's configuration
